--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# Пример конфигурации
+# Основные пути
 SERVICE_PORT=5566
-
 XRAY_EXECUTABLE_PATH=/app/xray
 XRAY_ASSETS_PATH=/app/data
 XRAY_CONFIG_PATH=/app/xray_config.json
@@ -8,6 +7,10 @@ SSL_CLIENT_CERT_FILE=/app/client.pem
 SSL_KEY_FILE=/app/server.key
 SSL_CERT_FILE=/app/server.cert
 
-# PEM-клиент сертификат в base64
-# Пример: cat client.pem | base64 -w0
+# Сертификаты и ключи в base64 (всё одной строкой)
+# cat client.pem | base64 -w0
 # CLIENT_PEM_B64=
+# cat server.key | base64 -w0
+# SERVER_KEY_B64=
+# cat server.cert | base64 -w0
+# SERVER_CERT_B64=
